# StreamStorm

./: .gitignore  CREDITS.md  Makefile  README.md  build_and_release.py
src/Engine/: .env.example  main.py  pyproject.toml
src/Engine/StreamStorm/ai/: AIFactory.py  Base.py  LangChain.py  LangChainModelFactory.py  Langchain.py  LangchainModelFactory.py  PydanticAI.py  PydanticAIModelFactory.py  ResponseModels.py  __init__.py
src/Engine/StreamStorm/api/: fastapi_app.py  validation.py
src/Engine/StreamStorm/core/: Playwright.py  SeparateInstance.py  StreamStorm.py  UndetectedDrivers.py
src/Engine/StreamStorm/mcp/: mcpserver.py
src/Engine/StreamStorm/settings/: SavedSettings.py  __init__.py  settings.py
src/Engine/StreamStorm/socketio/: sockets.md
src/Engine/StreamStorm/utils/: CombinedLifeSpan.py  CustomLogger.py  SavedSettings.py  StormStopper.py  SystemInfoEmitter.py  clear_ram.py  settings_json.py
src/Engine/lib/: __init__.py
src/Engine/lib/ai/: LangchainModelFactory.py  PLAN-FOR-AI.md  PydanticAI.py  PydanticAIModelFactory.py  ResponseModels.py
src/Engine/lib/api/: fastapi_app.py  validation.py
src/Engine/lib/core/: BrowserAutomator.py  CreateChannels.py  EngineContext.py  Playwright.py  Profiles.py  Selenium.py  SeparateInstance.py  StormContext.py  StreamStorm.py  UndetectedDrivers.py
src/Engine/lib/mcp/: mcpserver.py
src/Engine/lib/settings/: SavedSettings.py  Settings.py  __init__.py
src/Engine/lib/socketio/: sio.py  sockets.md
src/Engine/lib/utils/: clear_ram.py  (+6 more)
src/Engine/old_files/: main-old-flask.py
src/Engine/tests/: conftest.py
(+141 files in other folders)
